# teste

./: .env.example  .gitignore  Makefile  README.md  SECURITY.md  architecture.excalidraw  docker-compose.yml
db/: 01_schema.sql  02_seed.sql  03_audit_lockdown.sql  04_checkpoint.sql
docs/adr/: 0001-why-langgraph.md  0002-why-faiss.md  0003-mcp-as-trust-boundary.md  0004-mcp-transport-jsonrpc-http.md  0005-agent-as-mcp-client.md
go/: go.mod  go.sum
go/cmd/gateway/: main.go
go/cmd/hash-password/: main.go
go/cmd/mcp-server/: main.go
go/cmd/verify-audit/: main.go
go/internal/agentclient/: agentclient.go
go/internal/audit/: audit.go
go/internal/auth/: auth.go  auth_test.go  password.go  token.go
go/internal/authz/: authz.go
go/internal/config/: config.go
go/internal/domain/: domain.go
go/internal/gateway/: handlers.go  middleware.go  server.go
go/internal/mcp/: create_pix.go  get_account_balance.go  get_card_limit.go  get_customer_profile.go  server.go  update_card_limit.go
go/internal/policy/: policy.go
go/internal/store/: accounts.go  cards.go  customers.go  (+4 more)
kb/sources/: card-limit-policy.md  loan-rates.md  pix-policy.md
python/: Dockerfile  pyproject.toml
python/app/: __init__.py  config.py  llm.py  main.py  telemetry.py
python/app/graph/: __init__.py  build.py  state.py
python/app/graph/nodes/: __init__.py
python/app/guardrails/: __init__.py  input.py  output.py
python/app/mcp/: __init__.py  client.py
python/app/rag/: __init__.py  retriever.py
python/scripts/: build_kb_pdfs.py  ingest_kb.py
scripts/: demo.sh  requests.http
(+1 files in other folders)
