[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[project]
name = "banking-agent"
version = "0.1.0"
description = "Untrusted reasoning tier: LangGraph agent, RAG, soft guardrails."
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.111",
    "uvicorn>=0.30",
    "langgraph>=0.2",
    "langgraph-checkpoint-postgres>=2.0",  # Postgres checkpointer (memory + interrupt/resume)
    "langchain>=0.3",                       # RAG plumbing only (loaders, splitters, retriever)
    "langchain-community>=0.3",
    "pypdf>=4.0",                           # PDF loader for KB ingestion
    "langchain-google-genai>=2.0",           # Gemini via LangChain (ChatGoogleGenerativeAI)
    "faiss-cpu>=1.8",                       # vector index for RAG (suggested in the challenge)
    "psycopg[binary]>=3.2",                 # async Postgres driver
    "psycopg-pool>=3.2",                    # connection pool for AsyncPostgresSaver
    "mcp>=1.0",                             # MCP client
    "opentelemetry-sdk>=1.27",
    "opentelemetry-exporter-otlp>=1.27",
    "pydantic-settings>=2.4",
]

[project.optional-dependencies]
dev = ["pytest>=8", "ruff>=0.6", "fpdf2>=2.7"]  # fpdf2: build KB PDFs from markdown sources

[tool.ruff]
line-length = 100
